syntax = "proto2";
package pb;

message ServiceName
{
	optional uint32 handle = 1;
	optional string name = 2;
}

message iNameList
{
	repeated ServiceName list = 1;
}

message iRegisterName
{
	optional uint32 handle = 1;
	optional string name = 2;
	optional bool ok = 3; //是否可以暴露给其他服务
}